tests/scripts/errors/errors_run_params.zs
ffc script TooManyParams
{
    void run(int a, int a2, int a3, int a4, int a5, int a6, int a7, int a8, int a9)
    {
    }
}

ffc script NotTooManyParams
{
    void run(int a, int a2, int a3, int a4, int a5, int a6, int a7, int a8)
    {
    }
}
